[metadata]
name = pytqlib
version = 0.1
description = Distributed task queue library for distributed task execution
long_description = file: README.md, LICENSE
license = MIT
classifiers =
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
install_requires =
    more_itertools==8.12.0
    dataclasses_json==0.5.7
    PyYAML==6.0
    redis
    pymongo
setup_requires =
    wheel

package_dir =
    =src

packages=find_namespace:

[options.packages.find]
where = src
exclude =
    tests
    *.tests
    tests.*
    *.tests.*

[options.extras_require]
test =
    pytest
    flake8
    black
    waiting
    mypy
    pytest-xdist


[flake8]
exclude = .git,__pycache__,.pytest_cache
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 120
max-complexity = 24
select = B,C,E,F,W,T4,B9


[black]
line-length = 120

[aliases]
test=pytest

[tool:pytest]
log_cli = 1
log_cli_level = DEBUG
markers =
    slow
    serial
    integration
    redis
    mongo
