[metadata]
name = pytqlib
version = 0.0.7
description = Distributed task queue library for distributed task execution
long_description = file: README.md, LICENSE
license = MIT
classifiers =
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
install_requires =
    more_itertools==8.12.0
    dataclasses_json==0.5.7
    PyYAML==6.0
    redis==4.5.3
    pymongo==4.3.3
    python-statemachine==2.0.0
setup_requires =
    wheel

package_dir =
    =src

packages=find_namespace:

[options.packages.find]
where = src
exclude =
    tests
    *.tests
    tests.*
    *.tests.*

[options.extras_require]
test =
    pytest==7.2.2
    pytest-flake8==1.1.1
    flake8==6.0.0
    black==23.1.0
    waiting==1.4.1
    mypy==1.1.1
    fakeredis==2.10.3
redis=
    redis==4.5.3
mongo=
    pymongo==4.3.3
neo4j=
    py2neo==2021.2.3
    networkx==3.1

[flake8]
exclude = .git,__pycache__,.pytest_cache
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 120
max-complexity = 24
select = B,C,E,F,W,T4,B9


[black]
line-length = 120

[aliases]
test=pytest

[tool:pytest]
log_cli = 1
log_cli_level = DEBUG
markers =
    slow
    serial
    integration
    redis
    mongo
    neo4j
